--- a/Android/MyApplication/app/src/main/res/values/strings.xml
+++ b/Android/MyApplication/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Dehk</string>
 
-    <string name="hello_world">Hello world!</string>
+    <string name="bluetooth_unsupported_toast_msg">Unfortunately, your phone doesn't support bluetooth. Sucks.</string>
     <string name="action_settings">Settings</string>
 </resources>
